--- a/mysql_config.env
+++ b/mysql_config.env
@@ -1,5 +1,5 @@
 MYSQL_USER=root
-MYSQL_PASSWORD=a1K5!xyP#a786
+MYSQL_PASSWORD=
 MYSQL_DB=automatedmarkingdb
 MYSQL_HOST=localhost
-SECRET_KEY=7kGhZ4B0p0tTRFtKDXCef7sjfWkX7oWv
+SECRET_KEY=
